--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,7 @@
 /ConsoleApp1/ConsoleApp1/bin/
 /ConsoleApp1/.vs/
 /target/
+/java-dynamic-load/common/target/
+/java-dynamic-load/host/target/
+/java-dynamic-load/jar2/target/
+/java-dynamic-load/jar1/target/
