finally implement decorator with DecoratorContext

--- a/pom.xml
+++ b/pom.xml
@@ -11,11 +11,11 @@
         <maven.compiler.target>1.8</maven.compiler.target>
         <spring.version>4.3.24.RELEASE</spring.version>
         
-        <commons-lb.version>ec8aad0451b0634007279d798687ebb4f9a3b25c</commons-lb.version>
-        <commons-lb.dir>com.github.laim0nas100.Commons</commons-lb.dir>
+<!--        <commons-lb.version>ec8aad0451b0634007279d798687ebb4f9a3b25c</commons-lb.version>
+        <commons-lb.dir>com.github.laim0nas100.Commons</commons-lb.dir>-->
         
-<!--        <commons-lb.dir>lt.lb.commons</commons-lb.dir>
-        <commons-lb.version>local-jar</commons-lb.version>-->
+        <commons-lb.dir>lt.lb.commons</commons-lb.dir>
+        <commons-lb.version>local-jar</commons-lb.version>
     </properties>
     
     <repositories>
