--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,7 @@
 /java-dynamic-load/host/target/
 /java-dynamic-load/jar2/target/
 /java-dynamic-load/jar1/target/
+/java-dynamic-load/jar2 - Copy/target/
+/java-dynamic-load/x1/target/
+/java-dynamic-load/x1 - Copy/target/
+/java-dynamic-load/x2/target/
