--- a/java-dynamic-load/host/pom.xml
+++ b/java-dynamic-load/host/pom.xml
@@ -23,10 +23,10 @@
         <maven.compiler.target>1.8</maven.compiler.target>
     </properties>
     
-    <build>
+<!--    <build>
         <plugins>
             <plugin>
-                <!-- Build an executable JAR -->
+                 Build an executable JAR 
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
                 <version>3.1.0</version>
@@ -41,5 +41,5 @@
                 </configuration>
             </plugin>
         </plugins>
-    </build>
+    </build>-->
 </project>
